pdfmerger/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pdfmerger
  namespace: default
spec:
  selector:
    app: pdfmerger
  ports:
  - name: http
    targetPort: 8080
    port: 8080
